--- a/.github/workflows/oracle-db-delius-audit-replication-schema-setup.yml
+++ b/.github/workflows/oracle-db-delius-audit-replication-schema-setup.yml
@@ -81,7 +81,7 @@ jobs:
           role-duration-seconds: 21600
           aws-region: "eu-west-2"
 
-      - name: Run Statspack Setup Playbook
+      - name: Run Delius Audit Replication Schema Setup Playbook
         run: |
           export ANSIBLE_CONFIG=$ansible_config
           $command -i $inventory -e ansible_aws_ssm_bucket_name=${{ vars.ANSIBLE_AWS_SSM_BUCKET_NAME }} \
