--- a/playbooks/mis_database_links/playbook.yml
+++ b/playbooks/mis_database_links/playbook.yml
@@ -64,10 +64,11 @@
         secret: "/oracle/database/EMREP/shared-passwords"
         users:
           - sysman:
+    delius_account_name: "delius-core-{{ aws_environment }}"
     delius_environment_name: "{{ environment_name | regex_replace('mis', 'core') }}"
 
 - set_fact:
-    sql_cmd: "HOST aws ssm get-parameters --with-decryption --name account_ids | jq -r .Parameters[].Value | jq -r 'with_entries(if (.key|test(\\\"{{ delius_environment_name }}\\\")) then ( {key: .key, value: .value}) else empty end)' | jq -r 'to_entries|.[0].value'"
+    sql_cmd: "HOST aws ssm get-parameters --with-decryption --name account_ids | jq -r .Parameters[].Value | jq -r 'with_entries(if (.key|test(\\\"{{ delius_account_name }}\\\")) then ( {key: .key, value: .value}) else empty end)' | jq -r 'to_entries|.[0].value'"
 
 - name: Get SYSMAN Password
   include_tasks: "{{ playbook_dir }}/../../common/tasks/get_facts.yml"
