Define targets with bash shell

--- a/.github/workflows/oracle-db-password-rotation.yml
+++ b/.github/workflows/oracle-db-password-rotation.yml
@@ -197,6 +197,7 @@ jobs:
       - name: Define Targets
         id: definetargets
         working-directory: ${{ env.inventory }}
+        shell: bash
         run: |
           targets=""
           TargetEnvironment="${{ needs.oracle_password_preparation.outputs.TargetEnvironment }}"
