Run OEM blackout tasks if required

--- a/playbooks/oracle_password_rotation/all_password_rotation/tasks/non_oem_database_passwords.yml
+++ b/playbooks/oracle_password_rotation/all_password_rotation/tasks/non_oem_database_passwords.yml
@@ -34,7 +34,7 @@
 
 # Disable OEM Native Monitoring to avoid noise due to agent / broker connection failures during password changes
 - name: Disable Monitoring
-  when: unlock_system_passwords is not defined
+  when: unlock_system_passwords is not defined and not oem_blackout_required | default(false)
   block:
     - name: Start database monitoring blackout
       include_role:
@@ -248,11 +248,12 @@
 
     - name: Synchronise OEM Monitoring Passwords
       include_tasks: update_oem_targets.yml
-      when: sync_monitoring_passwords_nonoem | default(false) | bool
+      when: rotate_passwords_not_from_oem | default(false)
 
   # Restart Monitoring regardless of success of password rotation
   always:
     - name: Re-Enable Monitoring
+      when: not oem_blackout_required | default(false)
       block:
         # Re-Enable OEM Native Monitoring
         - name: Stop database monitoring blackout
@@ -291,4 +292,4 @@
     loop_var: username
   when:
     - database_primary_sid is defined
-    - unlock_system_passwords is defined
+    - unlock_system_passwords is defined or rotate_passwords_not_from_oem | default(false)
