--- a/playbooks/oracle_ha/build-ha/tasks/restore-primary-to-standby.yml
+++ b/playbooks/oracle_ha/build-ha/tasks/restore-primary-to-standby.yml
@@ -82,7 +82,7 @@
 
     - name: (main/restore-primary-to-standby) Report Script Run Command
       debug:
-        msg: "Running: /tmp/rman_duplicate_to_standby.sh {{ use_backup_flag | default('') }} {{ no_sbt_flag | default('') }} {{ force_restore_flag | default('') }} -t {{ database_primary_unique_name }} -s {{ database_standby_unique_name }} -i {{ oracle_database_oracle_home }}/dbs/init{{ database_standby_sid}}.ora_predg {{ ssm_parameter_option|default() }}"
+        msg: "Running: /tmp/rman_duplicate_to_standby.sh {{ use_backup_flag | default('') }} {{ no_sbt_flag | default('') }} {{ force_restore_flag | default('') }} {{ copy_redo_since_resetlogs_flag | default('') }}  -t {{ database_primary_unique_name }} -s {{ database_standby_unique_name }} -i {{ oracle_database_oracle_home }}/dbs/init{{ database_standby_sid}}.ora_predg {{ ssm_parameter_option|default() }}"
 
     - name: Get OEM Account Id
       set_fact:
