--- a/.github/workflows/oracle-db-restore-points.yml
+++ b/.github/workflows/oracle-db-restore-points.yml
@@ -278,6 +278,7 @@ jobs:
             playbooks/oracle_password_rotation
             playbooks/oem_blackout
             playbooks/ansible.cfg
+            common/*
           path: operations
           ref: ${{ github.event.inputs.SourceCodeVersion }}
           fetch-depth: 0
