--- a/.github/workflows/oracle-db-patch-report.yml
+++ b/.github/workflows/oracle-db-patch-report.yml
@@ -118,6 +118,15 @@ jobs:
           export ANSIBLE_CONFIG=$ansible_config
           # Link the checked out configuration roles to somewhere Ansible will be able to find them
           ln -s $PWD/roles/ansible/roles $PWD/operations/playbooks/oracle_patch_report/roles
-          hosts="environment_name_$(echo ${{ matrix.environment }} | sed -E 's/delius-(core|mis)-(dev)/delius_\1_development_\2/;s/delius-(core|mis)-(test|training)/delius_\1_test_\2/;s/delius-(core|mis)-(stage|pre-prod)/delius_\1_preproduction_\2/;s/delius-(core|mis)-(prod)/delius_\1_production_\2/')_${{ matrix.application }}_dbs"
+          if [[ "${{ matrix.application }}" == "hmpps-oem" ]]
+          then 
+             hosts="environment_name_${{ matrix.environment }}"
+          else
+             # Getting the host names for Delius Core and MIS Environments is less straightforward than
+             # for OEM since a single AWS Account can hold more than one Delius Environment; convert the
+             # short form Delius/MIS environment to the fully expanded form
+             hosts="environment_name_$(echo ${{ matrix.environment }} | \
+                sed -E 's/delius-(core|mis)-(dev)/delius_\1_development_\2/;s/delius-(core|mis)-(test)/delius_\1_test_\2/;s/delius-(core|mis)-(stage|preprod)/delius_\1_preproduction_\2/;s/delius-(core|mis)-(prod)/delius_\1_production_\2/')_${{ matrix.application }}_dbs"
+          fi
           $command -i $inventory -e ansible_aws_ssm_bucket_name=${{ vars.ANSIBLE_AWS_SSM_BUCKET_NAME }} \
           -e target_hosts=$hosts
