--- a/.github/workflows/oracle-db-patch-report.yml
+++ b/.github/workflows/oracle-db-patch-report.yml
@@ -118,7 +118,7 @@ jobs:
           export ANSIBLE_CONFIG=$ansible_config
           # Link the checked out configuration roles to somewhere Ansible will be able to find them
           ln -s $PWD/roles/ansible/roles $PWD/operations/playbooks/oracle_patch_report/roles
-          if [[ "${{ matrix.application }}" == "hmpps-oem" ]]
+          if [ "${{ matrix.application }}" == "hmpps-oem" ]
           then 
              hosts="environment_name_${{ matrix.environment }}"
           else
