OEM Specific Environment

--- a/playbooks/oracle_patch_report/oracle_patch_report/tasks/main.yml
+++ b/playbooks/oracle_patch_report/oracle_patch_report/tasks/main.yml
@@ -7,6 +7,10 @@
     . ~/.bash_profile
     export ORAENV_ASK=NO
     export ORACLE_SID=+ASM
+    if [ $(grep -c -E "^EMREP:" /etc/oratab) -eq 1 ]
+    then
+       export PATH=$PATH:/usr/local/bin
+    fi
     . oraenv > /dev/null
     $ORACLE_HOME/OPatch/opatch lsinv | grep "^Patch" | paste -d' ' - - | sed 's/:.*://' | sort -n -k2
   register: get_gi_patches
@@ -22,6 +26,16 @@
 - name: Get Database Patches
   shell: |
     . ~/.bash_profile
+    if [ $(grep -c -E "^EMREP:" /etc/oratab) -eq 1 ]
+    then
+       # The bash_profile for OEM DBs contains fewer environment
+       # settings than the equiavlent file for Delius DBs so we
+       # need to set these up here.
+       export ORAENV_ASK=NO
+       export ORACLE_SID=EMREP
+       export PATH=$PATH:/usr/local/bin
+       . oraenv > /dev/null
+    fi
     $ORACLE_HOME/OPatch/opatch lsinv | grep "^Patch" | paste -d' ' - - | sed 's/:.*://' | sort -n -k2
   register: get_db_patches
   changed_when: false
