--- a/.github/workflows/oracle-db-patch-report.yml
+++ b/.github/workflows/oracle-db-patch-report.yml
@@ -122,7 +122,7 @@ jobs:
           if [ "${{ matrix.application }}" = "hmpps-oem" ]
           then 
              hosts="environment_name_$(echo ${{ matrix.environment }} | tr '-' '_')"
-             $command -i $inventory -e target_hosts=$hosts
+             $command -i $inventory -e target_hosts=$hosts -e environment_name=${{ matrix.environment }}
           else
              # Getting the host names for Delius Core and MIS Environments is less straightforward than
              # for OEM since a single AWS Account can hold more than one Delius Environment; convert the
