--- a/.github/workflows/oracle-db-patch-report.yml
+++ b/.github/workflows/oracle-db-patch-report.yml
@@ -11,6 +11,7 @@ on:
         description: "Source version for the modernisation-platform-configuration-management. Enter a pull request, branch, commit ID, tag, or reference."
         type: string
         default: "main"
+  workflow_call:
 
 env:
   ansible_config: operations/playbooks/ansible.cfg
@@ -32,6 +33,8 @@ jobs:
       matrix:
         environment: 
           - delius-mis-dev
+          - delius-mis-stage
+          - delius-mis-preprod
         application:
           - mis
           - dsd
@@ -41,6 +44,22 @@ jobs:
             application: delius
           - environment: delius-core-test
             application: delius
+          - environment: delius-core-stage
+            application: delius
+          - environment: delius-core-preprod
+            application: delius
+          - environment: delius-core-prod
+            application: delius
+          - environment: delius-core-training
+            application: delius
+          - environment: hmpps-oem-development
+            application: hmpps-oem
+          - environment: hmpps-oem-test
+            application: hmpps-oem
+          - environment: hmpps-oem-preproduction
+            application: hmpps-oem
+          - environment: hmpps-oem-production
+            application: hmpps-oem
     environment: ${{ matrix.environment }}-preapproved
     container:
       image: ghcr.io/ministryofjustice/hmpps-delius-operational-automation:0.78.0
@@ -100,6 +119,19 @@ jobs:
           export ANSIBLE_CONFIG=$ansible_config
           # Link the checked out configuration roles to somewhere Ansible will be able to find them
           ln -s $PWD/roles/ansible/roles $PWD/operations/playbooks/oracle_patch_report/roles
-          hosts="environment_name_$(echo ${{ matrix.environment }} | sed -E 's/delius-(core|mis)-(dev)/delius_\1_development_\2/;s/delius-(core|mis)-(test|training)/delius_\1_test_\2/;s/delius-(core|mis)-(stage|pre-prod)/delius_\1_preproduction_\2/;s/delius-(core|mis)-(prod)/delius_\1_production_\2/')_${{ matrix.application }}_dbs"
-          $command -i $inventory -e ansible_aws_ssm_bucket_name=${{ vars.ANSIBLE_AWS_SSM_BUCKET_NAME }} \
-          -e target_hosts=$hosts
+          if [ "${{ matrix.application }}" = "hmpps-oem" ]
+          then 
+             hosts="environment_name_$(echo ${{ matrix.environment }} | tr '-' '_')"
+             $command -i $inventory -e target_hosts=$hosts -e environment_name=${{ matrix.environment }}
+          else
+             # Getting the host names for Delius Core and MIS Environments is less straightforward than
+             # for OEM since a single AWS Account can hold more than one Delius Environment; convert the
+             # short form Delius/MIS environment to the fully expanded form
+             # Also note that for Delius environments the AWS SSM Bucket name is stored as a GitHub
+             # Actions environment variable, whereas for OEM the Bucket name is an Ansible variable
+             # and so does not need to be included on the command line.
+             hosts="environment_name_$(echo ${{ matrix.environment }} | \
+                sed -E 's/delius-(core|mis)-(dev)/delius_\1_development_\2/;s/delius-(core|mis)-(test)/delius_\1_test_\2/;s/delius-(core|mis)-(stage|preprod)/delius_\1_preproduction_\2/;s/delius-(core|mis)-(prod)/delius_\1_production_\2/')_${{ matrix.application }}_dbs"
+             $command -i $inventory -e ansible_aws_ssm_bucket_name=${{ vars.ANSIBLE_AWS_SSM_BUCKET_NAME }} \
+                       -e target_hosts=$hosts
+          fi
