--- a/.github/workflows/oracle-db-build-ha.yml
+++ b/.github/workflows/oracle-db-build-ha.yml
@@ -111,6 +111,7 @@ jobs:
 
       - name: Check Standbydb's Configured In Ansible Inventory
         id: standbydbsconfigured
+        shell: bash
         working-directory: ${{ env.inventory }}
         run: |
           database_environment="environment_name_$(echo ${{ github.event.inputs.TargetEnvironment }} | sed 's/dev/development_dev/;s/test/test_test/;s/training/test_training/;s/stage/preproduction_stage/;s/pre-prod/preproduction_pre_prod/;s/-prod/_production_prod/;s/-/_/g')"
@@ -154,6 +155,7 @@ jobs:
 
       - name: Check Fast Start Fail Over Ansible Variable
         id: getfsfomode
+        shell: bash
         working-directory: ${{ env.inventory }}
         run: |
           fsfo_mode=$(yq '.fsfo_mode' group_vars/${{ steps.prepareinventorynames.outputs.primaryHost }}.yml)
