--- a/.github/workflows/slack-test.yml
+++ b/.github/workflows/slack-test.yml
@@ -1,5 +1,5 @@
 name: "Oracle: Slack Test"
-run-name: "Oracle: ${{ github.event_name == 'workflow_dispatch' && format('{0}_{1}_{2}', github.event.inputs.TargetEnvironment, github.event.inputs.Period, github.event.inputs.TargetHost) || 'iterative_call_for' }}_slack_test"
+run-name: "Oracle: Slack Test"
 on:
   push:
     branches:
